--- a/2 - CSS-Grid-Dev-Tools/index.html
+++ b/2 - CSS-Grid-Dev-Tools/index.html
@@ -23,6 +23,9 @@
 <style>
     .container {
         display: grid;
+        grid-gap: 20px;
+        grid-template-columns: 100px 200px;
+
     }
 </style>
 </body>
